Added 1 section,begin developing backend

--- a/prangati/app/locales/en/translation.json
+++ b/prangati/app/locales/en/translation.json
@@ -1,4 +1,4 @@
 {
     "summerSale" : "Summer Sale For All Swim Suits And Free Express Delivery - OFF 50%!",
-    "search" : "What are you looking for?"
+    "search" : "Search"
 }
