--- a/prangati/app/locales/ro/translation.json
+++ b/prangati/app/locales/ro/translation.json
@@ -1,4 +1,4 @@
 {
     "summerSale" : "Vânzare de vară pentru toate costumele de baie și livrare rapidă gratuită - OFF 50%!",
-    "search" : "Căutare prin produse"
+    "search" : "Caută"
 }
