--- a/prangati/app/locales/ru/translation.json
+++ b/prangati/app/locales/ru/translation.json
@@ -1,5 +1,7 @@
 {
     "search" : "Поиск",
     "cookieConsentTitle" : "Мы используем cookie",
-    "cookieConsentSubtitle" : "Мы используем cookies для улучшения качества просмотра, анализа посещаемости сайта и персонализации контента. Продолжая пользоваться нашим сайтом, вы соглашаетесь с тем, что мы используем файлы cookie. Для получения дополнительной информации ознакомьтесь с нашей Политикой использования файлов <u>cookie</u>."
+    "cookieConsentSubtitle" : "Мы используем cookies для улучшения качества просмотра, анализа посещаемости сайта и персонализации контента. Продолжая пользоваться нашим сайтом, вы соглашаетесь с тем, что мы используем файлы cookie. Для получения дополнительной информации ознакомьтесь с нашей Политикой использования файлов cookie.",
+    "cookieConsentAccept" : "Принять все cookie",
+  "cookieConsentDecline" : "Управление параметрами"
 }
